Exercicio final loja alignment fixed

--- a/html-css-final/loja/css/index_sections/_furniture-img.scss
+++ b/html-css-final/loja/css/index_sections/_furniture-img.scss
@@ -36,16 +36,18 @@
 .carrousel {
   text-align: center;
   width: 95%;
-  padding: 2rem 0;
+  padding: 1rem 0;
 }
 .carrousel-images {
   @include display(row, 1rem);
   flex-wrap: nowrap;
   padding: 1rem;
+  justify-content: center;
+  overflow: hidden;
 
   img {
     border-radius: 4px;
-    width: 25%;
+    width: 40%;
   }
 }
 
