--- a/html-css-final/loja/css/product_sections/_product-second-section.scss
+++ b/html-css-final/loja/css/product_sections/_product-second-section.scss
@@ -4,40 +4,43 @@
   text-align: center;
 
   &-icons {
-    @include display(row, 1rem);
+    @include display(row, 12px);
     flex-wrap: wrap;
-    width: 70%;
-    padding: 1rem;
-    margin: auto;
+    width: 60%;
+    padding: 2rem 0;
+    justify-self: center;
 
-    img {
-      width: 40%;
+    & > div {
+      width: 45%;
+
+      img {
+        width: 90%;
+      }
     }
   }
-}
 
-.product-features-content {
-
-    video{
-        width: 95%;
+  &-content {
+    video {
+      width: 95%;
     }
-    
-  & > div {
-    @include display();
-    padding: 1rem;
-    text-align: left;
 
-    .content-item{
-       @include display();
+    & > div {
+      @include display();
+      padding: 1rem;
+      text-align: left;
+
+      .content-item {
+        @include display();
         line-height: 150%;
+      }
     }
-  }
-  p {
-    font-size: 20px;
-  }
+    p {
+      font-size: 20px;
+    }
 
-  div > p {
-    font-size: 14px;
+    div > p {
+      font-size: 14px;
+    }
   }
 }
 
@@ -66,41 +69,39 @@
 
 @media (min-width: 750px) {
   .product-features {
-    width: 80%;
+    width: 90%;
     text-align: left;
     margin: auto;
-
+    padding: 2rem 0;
 
     &-icons {
       flex-wrap: nowrap;
-      padding: 0 24px;
+      padding: 2rem 0;
+      width: 100%;
+      text-align: center;
 
       img {
-        width: 20%;
+        width: 60%;
       }
     }
 
-    &-content{
-        @include display(row);
-        background-color: aqua;
-        align-items: center;
-        margin-bottom: 2rem;
+    &-content {
+      @include display(row);
+      align-items: flex-start;
+      padding: 4rem 0;
 
-}
-    &-content:last-child{
-        flex-direction: row-reverse;
+      & > div {
+        .content-item {
+          @include display(row);
+        }
+      }
+    }
+    &-content:last-child {
+      flex-direction: row-reverse;
     }
 
-    .content-item {
-        flex-direction: row;
-        width:35%;
-        flex-wrap: wrap;
-        background-color: red;
-    }
-
-
-    video{
-        width: 50%;
+    video {
+      width: 50%;
     }
   }
 
