--- a/html-css-final/loja/css/styles.css
+++ b/html-css-final/loja/css/styles.css
@@ -49,20 +49,24 @@ nav .nav-options {
   }
 }
 header {
-  background-image: url("/assets/splash-screen.webp");
-  background-size: cover;
-  background-position: center;
-  height: 500px;
   display: flex;
   flex-direction: column;
   gap: 0;
   align-items: start;
   justify-content: flex-end;
 }
+header img {
+  width: -moz-fit-content;
+  width: fit-content;
+  align-self: center;
+  height: 500px;
+}
 header h1 {
   color: #fff;
   font-weight: normal;
   padding: 16px;
+  position: absolute;
+  top: 400px;
 }
 header a {
   background: #FCED70;
@@ -72,17 +76,26 @@ header a {
   border-radius: 4px;
   border: none;
   margin: 0 0 1rem 1rem;
+  position: absolute;
+  bottom: 350px;
 }
 
 @media (min-width: 750px) {
   header {
     justify-content: start;
   }
+  header img {
+    width: 100%;
+  }
   header h1 {
     padding: 54px 0 0 148px;
+    position: absolute;
+    top: 100px;
   }
   header a {
-    margin: 16px 0 0 148px;
+    margin: 0 0 0 148px;
+    position: relative;
+    bottom: 360px;
   }
 }
 .furniture,
@@ -126,7 +139,7 @@ header a {
 .carrousel {
   text-align: center;
   width: 95%;
-  padding: 2rem 0;
+  padding: 1rem 0;
 }
 
 .carrousel-images {
@@ -135,10 +148,12 @@ header a {
   gap: 1rem;
   flex-wrap: nowrap;
   padding: 1rem;
+  justify-content: center;
+  overflow: hidden;
 }
 .carrousel-images img {
   border-radius: 4px;
-  width: 25%;
+  width: 40%;
 }
 
 @media (min-width: 750px) {
@@ -200,11 +215,14 @@ header a {
   }
 }
 .easy-to-move {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  align-items: center;
   padding: 48px 0;
 }
 .easy-to-move video {
-  width: 100%;
+  width: 90%;
   padding: 24px 0;
 }
 .easy-to-move a {
@@ -214,8 +232,18 @@ header a {
   color: #000;
   border-radius: 4px;
   border: none;
+  width: -moz-max-content;
+  width: max-content;
 }
 
+@media (min-width: 750px) {
+  .easy-to-move {
+    width: 100%;
+  }
+  .easy-to-move video {
+    width: 100%;
+  }
+}
 .subscribe {
   background: #514F4D;
   display: flex;
@@ -397,8 +425,7 @@ footer li:first-child {
   flex-direction: column;
   gap: 24px;
   width: 95%;
-  margin: auto;
-  margin: 48px 24px;
+  padding: 2rem;
 }
 .about > p {
   font-size: 20px;
@@ -416,6 +443,7 @@ footer li:first-child {
     flex-direction: row;
     gap: 24px;
     justify-content: center;
+    width: 90%;
   }
   .product .product-description {
     width: 60%;
@@ -423,12 +451,17 @@ footer li:first-child {
   .product .product-characteristics {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 24px;
     width: 40%;
+  }
+  .product-upgrade a {
+    margin: auto;
   }
   .product-dimensions {
     flex-direction: row;
     gap: 16px;
+    padding: 4rem 0;
+    width: 90%;
   }
   .product-dimensions img, .product-dimensions-text {
     width: 50%;
@@ -436,7 +469,11 @@ footer li:first-child {
   .product-dimensions-text > div {
     padding: 8px 0;
   }
-  .about > div {
+  .about {
+    width: 90%;
+    justify-self: center;
+  }
+  .about .paragraphs {
     display: flex;
     flex-direction: row;
     gap: 24px;
@@ -448,16 +485,18 @@ footer li:first-child {
 .product-features-icons {
   display: flex;
   flex-direction: row;
-  gap: 1rem;
+  gap: 12px;
   flex-wrap: wrap;
-  width: 70%;
-  padding: 1rem;
-  margin: auto;
+  width: 60%;
+  padding: 2rem 0;
+  justify-self: center;
 }
-.product-features-icons img {
-  width: 40%;
+.product-features-icons > div {
+  width: 45%;
 }
-
+.product-features-icons > div img {
+  width: 90%;
+}
 .product-features-content video {
   width: 95%;
 }
@@ -502,33 +541,34 @@ footer li:first-child {
 
 @media (min-width: 750px) {
   .product-features {
-    width: 80%;
+    width: 90%;
     text-align: left;
     margin: auto;
+    padding: 2rem 0;
   }
   .product-features-icons {
     flex-wrap: nowrap;
-    padding: 0 24px;
+    padding: 2rem 0;
+    width: 100%;
+    text-align: center;
   }
   .product-features-icons img {
-    width: 20%;
+    width: 60%;
   }
   .product-features-content {
     display: flex;
     flex-direction: row;
     gap: 24px;
-    background-color: aqua;
-    align-items: center;
-    margin-bottom: 2rem;
+    align-items: flex-start;
+    padding: 4rem 0;
+  }
+  .product-features-content > div .content-item {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
   }
   .product-features-content:last-child {
     flex-direction: row-reverse;
-  }
-  .product-features .content-item {
-    flex-direction: row;
-    width: 35%;
-    flex-wrap: wrap;
-    background-color: red;
   }
   .product-features video {
     width: 50%;
